--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "cyber-duck/laravel-excel": "^1.2",
         "fideloper/proxy": "~3.3",
         "jacobemerick/kmeans": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.5"
+        "laravelcollective/html": "^5.5",
+        "maatwebsite/excel": "~2.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
